Added new footer to html

--- a/teamdetails.html
+++ b/teamdetails.html
@@ -17,5 +17,8 @@
         <li>Siddhi Mule - smule@ncsu.edu</li>
         <a href="smule@ncsu.edu">Visit Siddhi's Email</a>
     </ul>
+    <footer>
+        <p>2024 Example Conflict</p>
+    </footer>
 </body>
 </html>
