this commit will be reverted

--- a/teamdetails.html
+++ b/teamdetails.html
@@ -6,9 +6,11 @@
     <title>Team Details</title>
 </head>
 <body>
+
     <h1>Team Details</h1>
     <h2>Team Number: 35</h2>
     <h3>Team Members:</h3>
+    <h4>A COMMIT THAT SHOULD BE REVERSED</h4>
     <ul>
         <li>Anirudh Kaluri - akaluri@ncsu.edu</li>
         <a href="akaluri@ncsu.edu">Visit Anirudh's Email</a>
