added new branch and added comment to html file

--- a/teamdetails.html
+++ b/teamdetails.html
@@ -6,6 +6,7 @@
     <title>Team Details</title>
 </head>
 <body>
+    <!-- An example comment for a commit -->
     <h1>Team Details</h1>
     <h2>Team Number: 35</h2>
     <h3>Team Members:</h3>
