Added another comment to html doc, used for step 9

--- a/teamdetails.html
+++ b/teamdetails.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- An example comment for a commit -->
+     <!-- Second example for second attempt -->
     <h1>Team Details</h1>
     <h2>Team Number: 35</h2>
     <h3>Team Members:</h3>
